fixed bug that caused viewport width to be 100% + 20px too wide

--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ section {
   width: 100%;
   text-align: center;
   font-size: 20px;
-  margin: 0 10px 40px
+  margin: 0 0 40px;
 }
 
 .card .btn-orange {
